--- a/HTML/EXPERIMENT/Experiment1/index.html
+++ b/HTML/EXPERIMENT/Experiment1/index.html
@@ -10,11 +10,20 @@
 
     <!-- 🔹 Part 2: Header Section -->
     <header style="background:#1a1a1a; padding:20px; border-radius:10px; margin-bottom:20px; box-shadow:0px 0px 10px black;">
-      <h1 style="color:#00ffcc; margin:0; text-align: center;">Toshi Singh</h1>
-      <h3 style="color:#b3b3b3; margin-top:5px; text-align: center;">Aspiring Backend Developer | B.Tech CSE Student</h3>
-      <img src="toshi.png" alt="Profile Picture" width="150" 
-    style="display:block; margin:20px auto; border-radius:50%; border:3px solid #00ffcc;">
-    </header>
+	<h1 style="color:#00ffcc; margin:0; text-align: center;">Toshi Singh</h1>
+	<h3 style="color:#b3b3b3; margin-top:5px; text-align: center;">
+		Aspiring Web Developer | B.Tech CSE Student
+	</h3>
+	
+	<figure style="text-align:center; margin:20px 0;">
+		<img src="toshi.png" alt="Profile Picture" width="150"
+		style="border-radius:50%; border:3px solid #00ffcc;">
+		<figcaption style="color:#b3b3b3; margin-top:8px; font-size:14px;">
+		Toshi Singh
+		</figcaption>
+	</figure>
+	</header>
+
 
     <main>
 	    <!-- 🔹 Part 3: Contact Section -->
@@ -32,7 +41,7 @@
 	      <h2 style="color:#ffcc00;">💡 About Me</h2>
 	      <p style="color: aliceblue;">
 	        Hi, I am <b style="color:#00ffcc;">Toshi Singh</b>, a passionate <i>Computer Science Engineering</i> student.  
-	        I love working on <u style="color:#ff6666;">backend development</u> and exploring cybersecurity.  
+	        I love working on <u style="color:#ff6666;">Web Developer</u> and exploring cybersecurity.  
 	        Currently, I am learning <b style="color:#66ff66;">Java, Python, HTML, CSS, and React</b>.
 	      </p>
 	    </section>
